--- a/volunteer-in-pretoria.html
+++ b/volunteer-in-pretoria.html
@@ -56,24 +56,9 @@
       <h2>Follow Us on Social Media</h2>
       <p>See our volunteers in action, share, and support!</p>
       <div class="social-icons">
-        <a href="#" target="_blank" aria-label="Visit our Instagram">
+        <a href="https://www.instagram.com/arekolomakeng/" target="_blank" aria-label="Visit our Instagram">
           <svg fill="#E4405F" viewBox="0 0 24 24">
             <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2.1 2.1.3 2.6.6.6.3 1.1.7 1.6 1.2.5.5.9 1 .9 1.6.3.5.5 1.4.6 2.6.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.2-.3 2.1-.6 2.6-.3.6-.7 1.1-1.2 1.6s-1 .9-1.6.9c-.5.3-1.4.5-2.6.6-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2-.1-2.1-.3-2.6-.6-.6-.3-1.1-.7-1.6-1.2-.5-.5-.9-1-.9-1.6-.3-.5-.5-1.4-.6-2.6C2.2 15.6 2.2 15.2 2.2 12s0-3.6.1-4.9c.1-1.2.3-2.1.6-2.6.3-.6.7-1.1 1.2-1.6.5-.5 1-.9 1.6-.9.5-.3 1.4-.5 2.6-.6C8.4 2.2 8.8 2.2 12 2.2zm0 1.8c-3.1 0-3.4 0-4.6.1-1.1.1-1.7.2-2.1.4-.5.2-.8.5-1.2.9-.4.4-.7.7-.9 1.2-.2.4-.3 1-.4 2.1-.1 1.2-.1 1.5-.1 4.6s0 3.4.1 4.6c.1 1.1.2 1.7.4 2.1.2.5.5.8.9 1.2.4.4.7.7 1.2.9.4.2 1 .3 2.1.4 1.2.1 1.5.1 4.6.1s3.4 0 4.6-.1c1.1-.1 1.7-.2 2.1-.4.5-.2.8-.5 1.2-.9.4-.4.7-.7.9-1.2.2-.4.3-1 .4-2.1.1-1.2.1-1.5.1-4.6s0-3.4-.1-4.6c-.1-1.1-.2-1.7-.4-2.1-.2-.5-.5-.8-.9-1.2-.4-.4-.7-.7-1.2-.9-.4-.2-1-.3-2.1-.4-1.2-.1-1.5-.1-4.6-.1zm0 3.9a5.9 5.9 0 1 1 0 11.8 5.9 5.9 0 0 1 0-11.8zm0 1.8a4.1 4.1 0 1 0 0 8.2 4.1 4.1 0 0 0 0-8.2zm5.9-2.2a1.4 1.4 0 1 1 0 2.8 1.4 1.4 0 0 1 0-2.8z"/>
-          </svg>
-        </a>
-        <a href="#" target="_blank" aria-label="Visit our TikTok">
-          <svg fill="#000000" viewBox="0 0 24 24">
-            <path d="M12.08 2c1.25 0 2.44.3 3.5.8.3 2.2 1.9 3.9 4.1 4.2v3.2c-1.8-.2-3.5-1-4.7-2.2v6.7c0 3.7-2.7 6.7-6 6.7s-6-3-6-6.7 2.7-6.7 6-6.7c.2 0 .5 0 .7.1v3.5a2.5 2.5 0 0 0-.7-.1c-1.4 0-2.5 1.4-2.5 3.2 0 1.7 1.1 3.2 2.5 3.2 1.4 0 2.5-1.5 2.5-3.2V2h1.1z"/>
-          </svg>
-        </a>
-        <a href="#" target="_blank" aria-label="Visit our Twitter">
-          <svg fill="#1DA1F2" viewBox="0 0 24 24">
-            <path d="M23 2.9c-.8.4-1.7.6-2.6.8a4.5 4.5 0 0 0 2-2.5c-.9.5-1.9.9-3 .9a4.6 4.6 0 0 0-7.8 4.2A13.1 13.1 0 0 1 1.7 2.3 4.6 4.6 0 0 0 3 8.4a4.4 4.4 0 0 1-2.1-.6v.1a4.6 4.6 0 0 0 3.7 4.5 4.6 4.6 0 0 1-2.1.1 4.6 4.6 0 0 0 4.3 3.3 9.3 9.3 0 0 1-5.7 2 13.1 13.1 0 0 0 7 2c8.4 0 13-7 13-13l-.01-.6A9.1 9.1 0 0 0 23 2.9z"/>
-          </svg>
-        </a>
-        <a href="#" target="_blank" aria-label="Visit our Facebook">
-          <svg fill="#1877F2" viewBox="0 0 24 24">
-            <path d="M22 12a10 10 0 1 0-11.5 9.9v-7H8v-3h2.5V9.5c0-2.4 1.5-3.7 3.6-3.7 1 0 1.9.1 2.2.1v2.5h-1.5c-1.2 0-1.5.6-1.5 1.4v1.7h2.7l-.4 3h-2.3v7A10 10 0 0 0 22 12z"/>
           </svg>
         </a>
       </div>
